<resources>
    <string name="app_name">CONTROL DE HACIENDA</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="a_adir_vaca">AÑADIR VACA</string>
    <string name="n_mero_de_caravana">Número de Caravana</string>
    <string name="n_peso">Peso</string>
    <string name="selecciona_color_y_ubicaci_n">SELECCIONA RAZA, UBICACIÓN Y SEXO</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="nombre">Nombre</string>
    <string name="ver">VER</string>
    <string name="tipo_control">Tipo Control</string>
    <string name="guardar">Guardar</string>
    <string name="agregar_control">Agregar Control</string>
    <string name="ver_control">Ver Controles</string>
    <string name="sanitacion">Sanitación</string>
    <string name="observacion">Observación...</string>
    <string name="buscar_control_por_fecha">Buscar control por fecha</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="ganado">Ganado</string>
    <string name="asistencia">Asistencia</string>
</resources>