<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gemini_ganatec"
        tools:context=".VacaAsiste">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#65000000"
                android:text="\n Ganatec app \n"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:id="@+id/btnVerListaVacas"
                android:layout_width="156dp"
                android:layout_height="67dp"
                android:text="@string/ganado"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.188"/>

        <Button
                android:id="@+id/btnTomarAsitenciaVacas"
                android:layout_width="156dp"
                android:layout_height="67dp"
                android:text="@string/asistencia"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335"/>

        <Button
                android:id="@+id/btnSincData"
                android:layout_width="156dp"
                android:layout_height="67dp"
                android:text="@string/sincronizar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.472"/>

</androidx.constraintlayout.widget.ConstraintLayout>
