<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#281C3D"
    tools:context=".ControlVaca">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="630dp"
                android:gravity="center"
                android:padding="8dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txtNombreVaca"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:background="@drawable/border_nombre_vaca"
                    android:paddingStart="15dp"
                    android:paddingTop="9dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:id="@+id/txtNroCaravana"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/border_button_sin_color"
                    android:paddingStart="15dp"
                    android:paddingTop="9dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            <ScrollView
                    android:id="@id/scrollView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/border_button_sin_color"
                    android:layout_gravity="center"
                    tools:ignore="MissingConstraints">
                <Spinner
                        android:id="@+id/SnnTipoControl"
                        style="@style/SpinnerTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        tools:ignore="DuplicateIds"/>
            </ScrollView>

            <EditText
                    android:id="@+id/txtPeso"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:background="@drawable/border_button_sin_color"
                    android:ems="10"
                    android:hint="@string/n_peso"
                    android:inputType="number"
                    android:paddingStart="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry"/>
            <EditText
                    android:layout_width="300dp"
                    android:layout_height="171dp"
                    android:inputType="textMultiLine"
                    android:background="@drawable/border_button_sin_color"
                    android:textColor="#FFFFFF"
                    android:hint="@string/observacion"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/txtObservacion"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:id="@+id/btnAgregarControl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8">

        <Button
                android:id="@+id/btnGuardarControl"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/btn_verde"
                android:text="@string/guardar"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
